objects/ACCObjt1__c.object
<CustomObject>
    <description>Tyest1gfdhgfjhf</description>
    <fields>
        <fullName>FT1__c</fullName>
        <label>FT1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FT2__c</fullName>
        <label>FT2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FT3__c</fullName>
        <label>FT3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACCObjt1</label>
    <nameField>
        <label>ACCObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjt1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>